--- a/src/model/view/BMWWindow.fxml
+++ b/src/model/view/BMWWindow.fxml
@@ -75,13 +75,13 @@
                            </children>
                         </GridPane>
                         <ProgressIndicator fx:id="ind" layoutX="363.0" layoutY="24.0" prefHeight="44.0" prefWidth="32.0" progress="0.0" />
-                        <Label fx:id="inProgressLabel" layoutX="275.0" layoutY="28.0" text="Audio Progress" />
+                        <Label fx:id="inProgressLabel" layoutX="274.0" layoutY="37.0" text="Audio Progress" textOverrun="CLIP" />
                         <Label layoutX="75.0" layoutY="15.0" prefHeight="44.0" prefWidth="136.0" text="Project Name">
                            <font>
                               <Font size="22.0" />
                            </font>
                         </Label>
-                        <ButtonBar buttonMinWidth="25.0" layoutY="567.0" prefHeight="47.0" prefWidth="457.0">
+                        <ButtonBar buttonMinWidth="25.0" layoutY="527.0" prefHeight="47.0" prefWidth="457.0">
                           <buttons>
                             <Button fx:id="numberVariableButton1" minWidth="0.0" mnemonicParsing="false" onAction="#numberButton1" prefHeight="40.0" prefWidth="41.0" text="1" />
                               <Button fx:id="numberVariableButton2" layoutX="425.0" layoutY="23.0" minWidth="0.0" mnemonicParsing="false" onAction="#numberButton2" prefHeight="40.0" prefWidth="41.0" text="2" />
@@ -94,10 +94,10 @@
                               <Button fx:id="numberVariableButton9" layoutX="68.0" layoutY="23.0" minWidth="0.0" mnemonicParsing="false" onAction="#numberButton9" prefHeight="40.0" prefWidth="41.0" text="9" />
                           </buttons>
                         </ButtonBar>
-                        <TextField fx:id="numberInputField" layoutX="109.0" layoutY="621.0" prefHeight="37.0" prefWidth="214.0" promptText="Insert Number" />
-                        <Button layoutX="349.0" layoutY="621.0" mnemonicParsing="false" onAction="#playCustomNumber" prefHeight="36.0" prefWidth="107.0" text="Play" />
-                        <Label layoutX="11.0" layoutY="541.0" prefHeight="26.0" prefWidth="128.0" text="Predefined Numbers" />
-                        <Label layoutX="10.0" layoutY="627.0" prefHeight="26.0" prefWidth="99.0" text="Custom Number" AnchorPane.bottomAnchor="10.0" />
+                        <TextField fx:id="numberInputField" layoutX="109.0" layoutY="581.0" prefHeight="37.0" prefWidth="214.0" promptText="Insert Number" />
+                        <Button layoutX="349.0" layoutY="581.0" mnemonicParsing="false" onAction="#playCustomNumber" prefHeight="36.0" prefWidth="107.0" text="Play" />
+                        <Label layoutX="11.0" layoutY="501.0" prefHeight="26.0" prefWidth="128.0" text="Predefined Numbers" />
+                        <Label layoutX="10.0" layoutY="595.0" prefHeight="26.0" prefWidth="99.0" text="Custom Number" AnchorPane.bottomAnchor="50.0" />
                         <Label layoutX="15.0" layoutY="76.0" prefHeight="26.0" prefWidth="128.0" text="Custom Commands" />
                         <Button layoutX="13.0" layoutY="19.0" mnemonicParsing="false" onAction="#projectOverviewButton" prefHeight="26.0" prefWidth="46.0" text="Back " />
                      </children>
